# sdl2opengldemo

./: CHANGELOG.txt  CMakeLists.txt  README.txt  sdl2opengldemowriteup.odt
.kdev4/: sdl2opengldemo-2_1.kdev4
include/: camera.h  commonheader.h  info.h  scenemkr.h  sdl2opengldemo.h  uniformprinter.h
openglresources/cyborg/: cyborg.blend  cyborg.blend1  cyborg.mtl
openglresources/nanosuit/: .directory  nanosuit.blend  nanosuit.blend1  nanosuit.mtl  nanosuit.mtl~
openglresources/shaders/: diffspecbinorm.frag  diffspecbinorm.vs  skyboxshader.vs
openglresources/skyboxes/ame_ash/: ashcanyon_dn.tga  ashcanyon_up.tga
openglresources/skyboxes/ely_snow/: snow_up.tga
openglresources/skyboxes/hw_morning/: morning_dn.tga  morning_up.tga
openglresources/skyboxes/hw_sahara/: sahara_dn.tga  sahara_up.tga
openglresources/skyboxes/lmcity/: lmcity_dn.tga  lmcity_up.tga
openglresources/skyboxes/mp_ac/: ac_dn.tga  ac_up.tga
openglresources/skyboxes/mp_cloud9/: cloud9_up.tga
openglresources/skyboxes/mp_dot/: dawn-of-time_dn.tga  dawn-of-time_up.tga  mp_dot.shader
openglresources/skyboxes/mp_downunder/: down-under_dn.tga  down-under_up.tga
openglresources/skyboxes/mp_druidcove/: druidcove_dn.tga  druidcove_up.tga
openglresources/skyboxes/mp_ec/: ec_bk.tga  ec_dn.tga  ec_ft.tga  ec_lf.tga  ec_rt.tga  ec_up.tga  mp_ec.shader
openglresources/skyboxes/mp_elemental/: elemental_bk.tga  elemental_dn.tga  elemental_ft.tga  elemental_lf.tga  elemental_rt.tga  elemental_up.tga  mp_elemental.shader
openglresources/skyboxes/mp_fcih/: fat-chance-in-hell_dn.tga  fat-chance-in-hell_up.tga
openglresources/skyboxes/mp_firestorm/: fire-storm_dn.tga  fire-storm_up.tga
openglresources/skyboxes/mp_gatekeeper/: gatekeeper_dn.tga  gatekeeper_up.tga  mp_gatekeeper.shader
openglresources/skyboxes/mp_goldrush/: goldrush_dn.tga  goldrush_up.tga
openglresources/skyboxes/mp_gritty/: gritty-residue_dn.tga  gritty-residue_up.tga  mp_gritty.shader
openglresources/skyboxes/mp_habitual/: habitual-pain_dn.tga  habitual-pain_up.tga  mp_habitual.shader
openglresources/skyboxes/mp_hexagon/: hexagon_dn.tga  hexagon_up.tga
openglresources/skyboxes/mp_marvelous/: bloody-marvelous_dn.tga  bloody-marvelous_up.tga
src/: CMakeLists.txt  camera.cpp  scenemkr.cpp  sdl2opengldemo.cpp  uniformprinter.cpp
